# gc_playground

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
c_stuff/: main  main.c  main.cpp  maincpp
cmake/: CodeCoverage.cmake
demo/: main.cpp
gc_playground/: gc.cpp  gc.hpp  gc1.hpp  gc2.hpp  gc3.cpp  gc3.hpp  main.cpp  mark_functions.cpp  mark_functions.hpp
gc_playground.xcodeproj/: project.pbxproj
gc_playground.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gc_playground.xcodeproj/xcuserdata/mike.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
gc_playground.xcodeproj/xcuserdata/mike.xcuserdatad/xcschemes/: gc_playground.xcscheme  xcschememanagement.plist
include/GC/: All.hpp  GC.hpp  Object.hpp  Ref.hpp  Utility.hpp  ValueObject.hpp  WeakRef.hpp  allocation.hpp  pointer.hpp
include/GC/GC/: Collector.hpp  Debug.hpp  GC.hpp  Object.hpp  Ptr.hpp  Ref.hpp  RefTraverse.hpp  Traverse.hpp  Utility.hpp  ValueObject.hpp  WeakRef.hpp  construct_array.hpp
include/NewGC/: allocation.hpp  collectable.hpp  frame.hpp  frame2.hpp  gc.hpp  memory.hpp  pointer.hpp  strategy.hpp  types.hpp
perftest/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  allocation.cpp  hello.cpp  main.cpp  performance.cpp  performance.hpp
src/GC/: GC.cpp
src/demo/: CMakeLists.txt  main.cpp
src/libgc_playground/: CMakeLists.txt
src/libgc_playground/GC/: Collector.cpp  GC.cpp
src/new_demo/: CMakeLists.txt  main.cpp
src/new_demo2/: CMakeLists.txt  main.cpp
src/perftest/: CMakeLists.txt  performance.cpp
test/: CMakeLists.txt  test_collector.cpp  test_construct_array.cpp  test_gc.cpp  test_main.cpp  test_object.cpp  test_ptr.cpp  test_ref.cpp  test_ref_traverse.cpp  test_traverse.cpp  test_utility.cpp  test_valueobject.cpp  test_weakref.cpp
